# Lab_2_SHI

./: main.py  pyproject.toml
db/: db.py  models.py
schema/: schema.py
templates/: index.html
utils/: LaptopExpertSystem.py
