[tool.poetry]
name = "lab-2-shii"
version = "0.1.0"
description = ""
authors = ["RKostuk <rostislav.kostuk.work@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_2_shii"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
